# silver-palm-tree

./: package-lock.json  package.json
app/: package.json  vite.config.ts
app/src/lib/: auto.ts  examples.ts  index.ts
app/src/routes/: +page.svelte
wasm-bridge/: Cargo.toml
wasm-bridge/pkg/: package.json  wasm_bridge.d.ts  wasm_bridge.js  wasm_bridge_bg.wasm  wasm_bridge_bg.wasm.d.ts
wasm-bridge/src/: lib.rs
