[package]
name = "apollo-json-selection-playground-wasm"
version = "0.1.0"
authors = ["Lenny Burdette <lenny@apollographql.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
apollo-compiler = "=1.0.0-beta.24"
wasm-bindgen = "0.2.84"
apollo-federation = { git = "https://github.com/apollographql/router", branch = "next" }
gloo-utils = { version = "0.2", features = ["serde"] }
serde_json_bytes = "0.2.2"
js-sys = "0.3.69"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
indexmap = "2.2.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
